WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288228
TransformationMatrix::inverse should use multiplication instead of division
https://bugs.webkit.org/show_bug.cgi?id=288228
Summary
TransformationMatrix::inverse should use multiplication instead of division
Ahmad Saleem
Reported
2025-02-21 13:03:48 PST
ssia - Merge:
https://chromium.googlesource.com/chromium/src/+/97e30b35dd6b89ee97f08cf467c80df5d3369fa5
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-21 13:04:00 PST
<
rdar://problem/145315926
>
Ahmad Saleem
Comment 2
2025-02-21 13:06:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41088
EWS
Comment 3
2025-02-24 09:23:16 PST
Committed
290955@main
(3cf9276ea2b7): <
https://commits.webkit.org/290955@main
> Reviewed commits have been landed. Closing PR #41088 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug