TransformationMatrix::inverse should use multiplication instead of division

https://bugs.webkit.org/show_bug.cgi?id=288228
rdar://145315926

Reviewed by Simon Fraser.

Merge: https://chromium.googlesource.com/chromium/src/+/97e30b35dd6b89ee97f08cf467c80df5d3369fa5

This is just merge of potential performance optimization since multiplication is faster compared
to division on certain platforms.

* Source/WebCore/platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::inverse):

Canonical link: https://commits.webkit.org/290955@main